// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type() for managed TextInput supports basic case: input: "Wow" 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "W",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "W",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "W",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 1,
          "start": 1,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "o",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "Wo",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "Wo",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 2,
          "start": 2,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "w",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "Wow",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "Wow",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 3,
          "start": 3,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
        "text": "Wow",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
]
`;

exports[`type() for managed TextInput supports rejecting TextInput: input: "ABC", value: "XXX" 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "focus",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "currentTarget": {
        "measure": [Function],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "A",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "XXXA",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "XXXA",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 4,
          "start": 4,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "B",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "XXXB",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "XXXB",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 4,
          "start": 4,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "key": "C",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "change",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "XXXC",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "changeText",
    "payload": "XXXC",
  },
  {
    "name": "selectionChange",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "selection": {
          "end": 4,
          "start": 4,
        },
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
        "text": "XXX",
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
  {
    "name": "blur",
    "payload": {
      "currentTarget": {},
      "nativeEvent": {
        "target": 0,
      },
      "persist": [Function],
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": {},
    },
  },
]
`;
